# DoomRPi

./: README.md
angdoom-0.1/libgii-1.0.2/: ChangeLog.1999  INSTALL  Makefile  Makefile.am  Makefile.in  acinclude.m4  config.h  config.h.in  config.lt  config.status  configure  configure.in  libgii.conf  libgii.conf.in  libtool
angdoom-0.1/libgii-1.0.2/demos/: Makefile  Makefile.am  Makefile.in  config  config.c  cpuinfo  cpuinfo.c  demo  demo.c  filter  filter.c  inputinfo  inputinfo.c  mhub  mhub.c  mhub.txt  scope  scope.c  tasksched  tasksched.c  xsendbut  xsendbut.c  xsendbut.txt
angdoom-0.1/libgii-1.0.2/demos/.deps/: config.Po  cpuinfo.Po  demo.Po  filter.Po  inputinfo.Po  mhub.Po  scope.Po  tasksched.Po  xsendbut.Po
angdoom-0.1/libgii-1.0.2/demos/.libs/: config  cpuinfo  demo  filter  inputinfo  mhub  scope  tasksched
angdoom-0.1/libgii-1.0.2/doc/: Makefile  Makefile.am  Makefile.in  README.directx
angdoom-0.1/libgii-1.0.2/doc/man/: GG_CIRCLEQ_LAST.3  GG_SPLAY_HEAD.3  Makefile  Makefile.am  Makefile.in  filter-key.7  filter-keytrans.7  filter-mouse.7  filter-save.7  filter-tcp.7  gg-error.3  gg-queue.3  gg-tree.3  gg-types.3  ggAddObserver.3  ggAddTask.3  ggCleanupForceExit.3  ggClearPublisher.3  ggConfigIterLocation.3  ggCurTime.3  ggExit.3  ggGetScope.3  ggGetSwarType.3  ggGetUserDir.3  ggInit.3  ggLoadConfig.3  ggLockCreate.3  ggNewScope.3  ggParseOptions.3  ggRegisterCleanup.3  ggTimeBase.3  ggTryLock.3  ggUSlumber.3  ggi-error.3  ggstrlcat.3  ggstrlcpy.3  giiAddEventMask.3  giiEventPoll.3  giiEventSelect.3  giiEventSend.3  (+37 more)
angdoom-0.1/libgii-1.0.2/filter/: Makefile  Makefile.am  Makefile.in
angdoom-0.1/libgii-1.0.2/filter-shared/: Makefile  Makefile.am  Makefile.in  keytrans.la  mouse.la  save.la  tcp.la
angdoom-0.1/libgii-1.0.2/filter-shared/.libs/: keytrans.la  keytrans.lai  keytrans.soT  keytrans.ver  mouse.lai  mouse.soT  mouse.ver  save.lai  save.soT  save.ver  tcp.lai  tcp.soT  tcp.ver
angdoom-0.1/libgii-1.0.2/filter/keytrans/: EXPSYMS  Makefile  Makefile.am  Makefile.in  filter.c  libkeytrans.la  man.txt
angdoom-0.1/libgii-1.0.2/filter/mouse/: EXPSYMS  Makefile  Makefile.am  Makefile.in  filter.c  filter.lo  libfiltermouse.la  man.txt
angdoom-0.1/libgii-1.0.2/filter/save/: EXPSYMS  Makefile  Makefile.am  Makefile.in  filter.c  libsave.la  man.txt
angdoom-0.1/libgii-1.0.2/filter/tcp/: EXPSYMS  Makefile  Makefile.am  Makefile.in  filter.c  libfiltertcp.la  man.txt
angdoom-0.1/libgii-1.0.2/gg/: EXPSYMS  EXPSYMS.quad  Makefile  Makefile.am  Makefile.in  cleanup.c  cleanup.h  cleanup.lo  cleanup_stubs.c  cleanup_stubs.lo  cleanup_win32.c  conf.c  conf.lo  cpuid.c  cpuid.h  cpuid.lo  cpuid_alpha.c  cpuid_ia32.c  cpuid_ppc.c  cpuid_sparc.c  debug.c  debug.lo  dl.c  dl_darwin.c  dl_win32.c  gglock.c  gglock.h  init.c  init.lo  libgg.la  memdebug.c  misc.c  misc.lo  misc_win32.c  parse.c  parse.lo  plat.h  ptlock.c  ptlock.lo  ptsched.c  (+10 more)
angdoom-0.1/libgii-1.0.2/gg/.deps/: cleanup.Plo  cleanup_stubs.Plo  conf.Plo  cpuid.Plo  debug.Plo  dl.Plo  init.Plo  misc.Plo  parse.Plo  ptlock.Plo  ptsched.Plo  string.Plo  task.Plo  time.Plo
angdoom-0.1/libgii-1.0.2/gg/.libs/: libgg.lai  libgg.so.1.0.0  libgg.ver
angdoom-0.1/libgii-1.0.2/gg/ggtick/: Makefile  Makefile.am  Makefile.in  ggtick.c
angdoom-0.1/libgii-1.0.2/gg/lib/: Makefile  Makefile.am  Makefile.in  memcmp.c  snprintf.c  strtoul.c
angdoom-0.1/libgii-1.0.2/gg/quad/: adddi3.c  anddi3.c  ashldi3.c  ashrdi3.c  cmpdi2.c  divdi3.c  fixdfdi.c  fixsfdi.c  fixunsdfdi.c  fixunssfdi.c  floatdidf.c  floatdisf.c  floatunsdidf.c  iordi3.c  lshldi3.c  lshrdi3.c  moddi3.c  muldi3.c  negdi2.c  notdi2.c  qdivrem.c  quad.am  quad.h  subdi3.c  ucmpdi2.c  udivdi3.c  umoddi3.c  xordi3.c
angdoom-0.1/libgii-1.0.2/gii/: EXPSYMS  Makefile  Makefile.am  Makefile.in  builtins.am  builtins.c  dl.c  dl.lo  gii.c  gii.lo  init.c  libgii.la  unix.c  unix.lo
angdoom-0.1/libgii-1.0.2/gii/.deps/: builtins.Plo  dl.Plo  gii.Plo  init.Plo  unix.Plo
angdoom-0.1/libgii-1.0.2/gii/.libs/: libgii.la  libgii.lai  libgii.so.1.0.0  libgii.so.1.0.0T  libgii.ver
angdoom-0.1/libgii-1.0.2/include/: Makefile  Makefile.am  Makefile.in
angdoom-0.1/libgii-1.0.2/include/ggi/: Makefile  Makefile.am  Makefile.in  system.h.in
angdoom-0.1/libgii-1.0.2/input/: Makefile  Makefile.am  Makefile.in
angdoom-0.1/libgii-1.0.2/input-shared/: Makefile  Makefile.am  Makefile.in  file.la  linux_evdev.la  linux_joy.la  linux_kbd.la  linux_mouse.la  lk201.la  mouse.la  null.la  spaceorb.la  stdin.la  tcp.la  x.la
angdoom-0.1/libgii-1.0.2/input-shared/.libs/: file.lai  file.soT  file.ver  linux_evdev.la  linux_evdev.lai  linux_evdev.soT  linux_evdev.ver  linux_joy.la  linux_joy.lai  linux_joy.soT  linux_joy.ver  linux_kbd.la  linux_kbd.lai  linux_kbd.soT  linux_kbd.ver  linux_mouse.la  linux_mouse.lai  linux_mouse.soT  linux_mouse.ver  lk201.la  lk201.lai  lk201.soT  lk201.ver  mouse.la  mouse.lai  mouse.soT  mouse.ver  null.lai  null.soT  null.ver  spaceorb.la  spaceorb.lai  spaceorb.soT  spaceorb.ver  stdin.la  stdin.lai  stdin.soT  stdin.ver  tcp.la  tcp.lai  (+5 more)
angdoom-0.1/libgii-1.0.2/input/cocoa/: EXPSYMS  Makefile  Makefile.am  Makefile.in  cocoa.h  cocoa.m  input.m  keysyms.h
angdoom-0.1/libgii-1.0.2/input/directx/: EXPSYMS  Makefile  Makefile.am  Makefile.in  di.c  dxguid.c  dxinput.h  dxinputkb.h  input.c  man.txt
angdoom-0.1/libgii-1.0.2/input/fdselect/: EXPSYMS  Makefile  Makefile.am  Makefile.in  input.c
angdoom-0.1/libgii-1.0.2/input/file/: EXPSYMS  Makefile  Makefile.am  Makefile.in  input.c  libfile.la  man.txt
angdoom-0.1/libgii-1.0.2/input/ipaq_touchscreen/: EXPSYMS  Makefile  Makefile.am  Makefile.in  input.c
angdoom-0.1/libgii-1.0.2/input/kii/: EXPSYMS  Makefile  Makefile.am  Makefile.in  input.c  kii.c  kii.h
angdoom-0.1/libgii-1.0.2/input/linux_evdev/: EXPSYMS  Makefile  Makefile.am  Makefile.in  (+8 more)
angdoom-0.1/libgii-1.0.2/m4/: Makefile  Makefile.am  Makefile.in  checktypes.m4  dlopen.m4  mutexes.m4  swar.m4  time.m4  winfuncs.m4
angdoom-0.1/libgii-1.0.2/regress/: Makefile  Makefile.am  Makefile.in  testsuite.inc.c
(+1939 files in other folders)
